--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.12.1",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.64"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -24,8 +32,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vite": "^6.3.1"
   }
 }
